Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9532

Improperly formatted or missing disk letter in disk Properties

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.0
    • None

    Description

      r67149.

      See attached screenshot. ReactOS differs not only from Win2k3, but also based on whether the drive is a local disk or removable media.
      I don't ask the description to be changed from "Properties for <Thing>" into "<Thing> Properties" (though that would be nice too). I just wish it at least displayed consistently "Properties for Local Disk (C:)" and "Properties for ROS_FILES (D:)"

      Attachments

        1. Broken 1.jpg
          Broken 1.jpg
          65 kB
        2. Broken 2.jpg
          Broken 2.jpg
          62 kB
        3. CORE-9532.diff
          2 kB
        4. Fixed 1.jpg
          Fixed 1.jpg
          65 kB
        5. Fixed 2.jpg
          Fixed 2.jpg
          63 kB
        6. properties.png
          properties.png
          26 kB

        Activity

          People

            AmineKhaldi AmineKhaldi
            Black_Fox Black_Fox
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: