[SHELL32] Fix improperly formatted or missing disk letter in disk Properties. By Barrett Karish. CORE-9532

svn path=/trunk/; revision=67358